--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "homepage": "https://github.com/BloomInstituteOfTechnology/github-usercard#readme",
   "devDependencies": {
-    "eslint": "^7.3.0",
+    "eslint": "^8.3.0",
     "parcel-bundler": "^1.12.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.24.0"
+  }
 }
